--- a/W8D1/jotitdown/skeleton/splash.html
+++ b/W8D1/jotitdown/skeleton/splash.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>JotItDown: Home</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-	<img src="splash.jpg">
+	<nav>
+		<ul>
+			<li><a href="#">Sign Up</a></li>
+			<li><a href="#">Sign In</a></li>
+			<li><a href="#">Sign Out</a></li>
+			<li><a href="#">Edit Profile</a></li>
+			<li><p> current_user: tupac_shakur </p></li>
+		</ul>
+	</nav>
+	<h1>JotItDown: The Note-taking app with the Best UX. Try it Today!</h1>
 
-	JotItDown: The Note-taking app with the Best UX. Try it Today!
 
-	<a href="#">Sign Up</a>
-	<a href="#">Sign In</a>
-	<a href="#">Sign Out</a>
-
-	<p> current_user: tupac_shakur </p>
-	<a href="#">Edit Profile</a>
-
-	<a href="#">about us</a>
-	<a href="#">careers</a>
-	<a href="#">contact</a>
-	<a href="index.html">home</a>
+	<footer>
+		<ul>
+			<li><a href="#">about us</a></li>
+			<li><a href="#">careers</a></li>
+			<li><a href="#">contact</a></li>
+			<li><a href="index.html">home</a></li>
+		</ul>
+	</footer>
 </body>
 </html>
-
-
-
